--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gashe.mimasacorporal">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".resultadoIMCActivity" />
-        <activity android:name=".homeActivity"></activity>
+        <activity android:name=".homeActivity" />
+        <activity android:name=".WebViewActivity"></activity>
     </application>
 
 </manifest>
