--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gashe.mimasacorporal">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,16 +10,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".resultadoIMCActivity" />
-        <activity android:name=".homeActivity" />
-        <activity android:name=".WebViewActivity"></activity>
+        <activity android:name=".activities.resultadoIMCActivity" />
+        <activity android:name=".activities.homeActivity" />
+        <activity android:name=".activities.WebViewActivity" />
+        <activity android:name=".activities.HistorialActivity"></activity>
     </application>
 
 </manifest>
